src/style.css
@font-face {
  font-family: "Chivo Mono";
  src: url(./ChivoMono-VariableFont_wght.ttf);
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: "Chivo Mono";
}

body {
  height: 100vh;
  /* background-image: url(../static/background.jpg); */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: white;
}

form {
  position: absolute;
  display: flex;
  flex-direction: column;
  top: 18px;
  right: 18px;
}

.error {
  border-top: 1px solid white;
  color: red;
  padding-top: 6px;
}

input {
  height: 24px;
  width: 275px;
  font-size: 18px;
  padding: 8px 24px;
  border: none;
  border-radius: 4px;
  outline: none;
  background-color: #4e4e4e3d;
  color: white;
  font-family: "Chivo Mono";
}

.report {
  display: flex;
  flex-direction: column;
  gap: 2px;
  position: absolute;
  top: 36px;
  left: 36px;
  font-size: 24px;
}

.city {
  font-size: 54px;
  font-weight: bold;
}

.icon {
  position: absolute;
  left: 0;
}

.weather {
  font-size: 36px;
  position: relative;
  display: flex;
  align-items: center;
  gap: 16px;
  padding: 8px 0;
}

.main {
  margin-left: 108px;
}

.temp {
  font-size: 132px;
  font-weight: bold;
  cursor: pointer;
}

